refactor GANReviewTool to use MVCS

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ AddInfobox.js
 CiteHighlighter/CiteHighlighter.xlsx
 CiteHighlighter/todo.txt
 cookie.txt
+coverage
 jsconfig.json
 HideRollbackOnTemplates.js
 Morebits/
