--- a/GANReviewTool/package.json
+++ b/GANReviewTool/package.json
@@ -1,7 +1,8 @@
 {
 	"dependencies": {
 		"jest": "^28.1.0",
-		"jest-when": "^3.5.1"
+		"jest-when": "^3.5.1",
+		"types-mediawiki": "github:wikimedia-gadgets/types-mediawiki"
 	},
 	"scripts": {
 		"test": "jest",
