add VoteCounter unit tests to continuous integration

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -42,3 +42,9 @@ jobs:
     - working-directory: ./UserRightsDiff
       run: npm test
       name: UserRightsDiff unit tests
+    
+    - working-directory: ./VoteCounter
+      run: npm install
+    - working-directory: ./VoteCounter
+      run: npm test
+      name: VoteCounter unit tests
