--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,27 +15,29 @@
 		"lodash"
 	],
 	"rules": {
+		"no-constant-condition": "off",
 		"no-console": "warn",
-		"no-extra-parens": ["error", "all", { "nestedBinaryExpressions": false }],
 		"no-unreachable-loop": "error",
 		"block-scoped-var": "error",
-		"curly": "error",
+		"curly": ["error", "multi-line"],
 		"eqeqeq": "error",
-		"guard-for-in": "error",
 		"lodash/prefer-includes": "error",
 		"lodash/prefer-startswith": "error",
 		"no-caller": "error",
 		"no-implicit-coercion": ["error", { "boolean": false }],
 		"no-lone-blocks": "error",
 		"no-multi-spaces": ["error", { "ignoreEOLComments": true }],
-		"no-useless-return": "error",
 		"yoda": "error",
 		"block-spacing": "error",
 		"brace-style": ["error", "1tbs"],
 		"comma-spacing": ["error", { "before": false, "after": true }],
 		"computed-property-spacing": ["error", "never"],
 		"func-call-spacing": ["error", "never"],
-		"indent": ["error", "tab", { "outerIIFEBody": 0, "SwitchCase": 1 }],
+		"indent": ["error", "tab", {
+			"outerIIFEBody": 0,
+			"SwitchCase": 1,
+			"ignoreComments": true
+		}],
 		"key-spacing": ["error", {"singleLine": {"beforeColon": false, "afterColon": true}}],
 		"keyword-spacing": ["error", { "after": true, "before": true}],
 		"no-array-constructor": "error",
@@ -43,8 +45,8 @@
 		"no-mixed-operators": "error",
 		"no-nested-ternary": "error",
 		"no-new-object": "error",
-		"no-tabs": ["error", { "allowIndentationTabs": true }],
 		"no-unneeded-ternary": "error",
+		"no-useless-escape": "off",
 		"no-whitespace-before-property": "error",
 		"semi": ["error", "always"],
 		"space-before-blocks": "error",
