--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/NovemLinguae/UserScripts#readme",
   "devDependencies": {
     "eslint": "^8.32.0",
-    "eslint-plugin-lodash": "github:wix/eslint-plugin-lodash"
+    "eslint-plugin-lodash": "github:wix/eslint-plugin-lodash",
+    "eslint-plugin-sonarjs": "^0.23.0"
   }
 }
