--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "eslint": "^8.32.0",
     "eslint-plugin-lodash": "github:wix/eslint-plugin-lodash",
-    "eslint-plugin-sonarjs": "^0.23.0"
+    "eslint-plugin-sonarjs": "^0.23.0",
+    "eslint-plugin-unicorn": "^49.0.0"
   }
 }
