--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -76,7 +76,8 @@
 		"jsdoc/require-param-description": 0,
 		"jsdoc/require-returns": 0,
 		"jsdoc/require-param": 0,
-		"jsdoc/require-returns-description": 0
+		"jsdoc/require-returns-description": 0,
+		"sonarjs/prefer-single-boolean-return": 0
 	},
 	"reportUnusedDisableDirectives": true,
 	"overrides": [
