--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -77,7 +77,8 @@
 		"jsdoc/require-returns": 0,
 		"jsdoc/require-param": 0,
 		"jsdoc/require-returns-description": 0,
-		"sonarjs/prefer-single-boolean-return": 0
+		"sonarjs/prefer-single-boolean-return": 0,
+		"sonarjs/prefer-immediate-return": 0
 	},
 	"reportUnusedDisableDirectives": true,
 	"overrides": [
