--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,14 +11,16 @@
 		"ecmaVersion": "latest"
 	},
 	"rules": {
-		"es-x/no-class-fields": 0,
-		"max-len": 0,
-		"es-x/no-async-functions": 0,
-		"es-x/no-array-prototype-includes": 0,
-		"no-jquery/variable-pattern": 0,
-		"no-shadow": 0,
-		"no-jquery/no-global-selector": 0,
 		"camelcase": 0,
-		"mediawiki/class-doc": 0
+		"es-x/no-array-prototype-includes": 0,
+		"es-x/no-async-functions": 0,
+		"es-x/no-class-fields": 0,
+		"es-x/no-optional-catch-binding": 0,
+		"es-x/no-rest-spread-properties": 0,
+		"max-len": 0,
+		"mediawiki/class-doc": 0,
+		"no-jquery/no-global-selector": 0,
+		"no-jquery/variable-pattern": 0,
+		"no-shadow": 0
 	}
 }
