--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,9 @@
 		"es-x/no-async-functions": 0,
 		"es-x/no-class-fields": 0,
 		"es-x/no-optional-catch-binding": 0,
+		"es-x/no-regexp-lookbehind-assertions": 0,
 		"es-x/no-rest-spread-properties": 0,
+		"es-x/no-string-prototype-matchall": 0,
 		"max-len": 0,
 		"mediawiki/class-doc": 0,
 		"no-jquery/no-global-selector": 0,
