--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,12 +17,14 @@
 		"es-x/no-class-fields": 0,
 		"es-x/no-optional-catch-binding": 0,
 		"es-x/no-regexp-lookbehind-assertions": 0,
+		"es-x/no-regexp-s-flag": 0,
 		"es-x/no-rest-spread-properties": 0,
 		"es-x/no-string-prototype-matchall": 0,
 		"max-len": 0,
 		"mediawiki/class-doc": 0,
 		"no-jquery/no-global-selector": 0,
 		"no-jquery/variable-pattern": 0,
-		"no-shadow": 0
+		"no-shadow": 0,
+		"security/detect-non-literal-regexp": 0
 	}
 }
