--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
 		"mw": "readonly"
 	},
 	"parserOptions": {
-		"ecmaVersion": "latest"
+		"ecmaVersion": "latest",
+		"sourceType": "module"
 	},
 	"rules": {
 		"camelcase": "off",
