fix linter errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,9 @@
 		"no-jquery/no-parse-html-literal": "off",
 		"no-jquery/variable-pattern": "off",
 		"no-shadow": "off",
+		"no-underscore-dangle": "off",
 		"security/detect-non-literal-regexp": "off",
-		"security/detect-unsafe-regex": "off"
+		"security/detect-unsafe-regex": "off",
+		"unicorn/prefer-string-slice": "off"
 	}
 }
