--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
 		"no-shadow": "off",
 		"no-underscore-dangle": "off",
 		"security/detect-non-literal-regexp": "off",
-		"security/detect-unsafe-regex": "off"
+		"security/detect-unsafe-regex": "off",
+		"unicorn/prefer-string-slice": "off"
 	}
 }
