--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,11 +25,15 @@
 		"es-x/no-rest-spread-properties": "off",
 		"es-x/no-string-prototype-matchall": "off",
 		"es-x/no-string-prototype-replaceall": "off",
+		"eqeqeq": "warn",
 		"jsdoc/require-param": "off",
 		"jsdoc/require-param-type": "off",
 		"jsdoc/require-returns": "off",
+		"jsdoc/check-alignment": "error",
+		"jsdoc/tag-lines": "error",
 		"max-len": "off",
 		"mediawiki/class-doc": "off",
+		"no-console": "warn",
 		"no-jquery/no-class-state": "off",
 		"no-jquery/no-global-selector": "off",
 		"no-jquery/no-parse-html-literal": "off",
