--- a/package.json
+++ b/package.json
@@ -17,11 +17,6 @@
   },
   "homepage": "https://github.com/NovemLinguae/UserScripts#readme",
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-wikimedia": "^0.28.2",
-    "eslint-plugin-jsdoc": "^46.9.0",
-    "eslint-plugin-lodash": "github:wix/eslint-plugin-lodash",
-    "eslint-plugin-sonarjs": "^0.23.0",
-    "eslint-plugin-unicorn": "^49.0.0"
+    "eslint-config-wikimedia": "^0.28.2"
   }
 }
