--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -30,11 +30,11 @@ jobs:
       run: npm test
       name: SpeciesHelper unit tests
     
-    - working-directory: ./unblock-review
+    - working-directory: ./UnblockReview
       run: npm install
-    - working-directory: ./unblock-review
+    - working-directory: ./UnblockReview
       run: npm test
-      name: unblock-review unit tests
+      name: UnblockReview unit tests
 
     - working-directory: ./UserRightsDiff
       run: npm install
