--- a/- gadgets/.eslintrc.json
+++ b/- gadgets/.eslintrc.json
@@ -1,13 +1,66 @@
 {
+	"extends": [
+		"wikimedia/client/es6",
+		"wikimedia/jquery",
+		"wikimedia/mediawiki"
+	],
+	"root": true,
+	"globals": {
+		"jQuery": "readonly",
+		"mw": "readonly",
+		"Map": "readonly"
+	},
 	"rules": {
-		"es-x/no-array-prototype-includes": "warn",
-		"es-x/no-async-functions": "warn",
-		"es-x/no-class-fields": "warn",
-		"es-x/no-optional-catch-binding": "warn",
-		"es-x/no-regexp-lookbehind-assertions": "warn",
-		"es-x/no-regexp-s-flag": "warn",
-		"es-x/no-rest-spread-properties": "warn",
-		"es-x/no-string-prototype-matchall": "warn",
-		"es-x/no-string-prototype-replaceall": "warn"
+		"array-bracket-spacing": "off",
+		"comma-dangle": "off",
+		"computed-property-spacing": "off",
+		"eqeqeq": "off",
+		"es-x/no-array-prototype-includes": "off",
+		"indent": "off",
+		"jsdoc/require-param": "off",
+		"jsdoc/require-returns": "off",
+		"max-len": "off",
+		"no-alert": "off",
+		"no-jquery/no-class-state": "off",
+		"no-jquery/no-global-selector": "off",
+		"no-shadow": "off",
+		"object-curly-spacing": "off",
+		"space-before-function-paren": "off",
+		"space-in-parens": "off",
+		"template-curly-spacing": "off",
+
+		"no-nested-ternary": "error",
+		"no-restricted-syntax": [
+			"warn",
+			{
+				"message": "Using .done() is discouraged. See https://www.mediawiki.org/wiki/Manual:Coding_conventions/JavaScript#Asynchronous_code",
+				"selector": "MemberExpression > Identifier[name=\"done\"]"
+			},
+			{
+				"message": "Using .fail() is discouraged. See https://www.mediawiki.org/wiki/Manual:Coding_conventions/JavaScript#Asynchronous_code",
+				"selector": "MemberExpression > Identifier[name=\"fail\"]"
+			}
+		],
+		"unicorn/prefer-includes": "error",
+
+		"camelcase": ["warn", {"properties": "never"}],
+		"es-x/no-object-values": "warn",
+		"mediawiki/class-doc": "warn",
+		"new-cap": "warn",
+		"no-jquery/no-constructor-attributes": "warn",
+		"no-jquery/no-each-util": "warn",
+		"no-jquery/no-extend": "warn",
+		"no-jquery/no-grep": "warn",
+		"no-jquery/no-in-array": "warn",
+		"no-jquery/no-map-util": "warn",
+		"no-jquery/no-parse-html-literal": "warn",
+		"no-jquery/no-sizzle": "warn",
+		"no-loop-func": "warn",
+		"no-new": "warn",
+		"no-script-url": "warn",
+		"no-unused-expressions": "warn",
+		"no-use-before-define": "warn",
+		"no-var": "warn",
+		"unicorn/prefer-string-slice": "warn"
 	}
 }
