Popups: jsdoc/tag-lines

--- a/- gadgets/.eslintrc.json
+++ b/- gadgets/.eslintrc.json
@@ -24,7 +24,9 @@
 		"no-jquery/no-class-state": "off",
 		"no-jquery/no-global-selector": "off",
 		"no-shadow": "off",
+		"no-tabs": "off",
 		"object-curly-spacing": "off",
+		"spaced-comment": "off",
 		"space-before-function-paren": "off",
 		"space-in-parens": "off",
 		"template-curly-spacing": "off",
