--- a/- gadgets/.eslintrc.json
+++ b/- gadgets/.eslintrc.json
@@ -17,6 +17,7 @@
 		"eqeqeq": "off",
 		"es-x/no-array-prototype-includes": "off",
 		"indent": "off",
+		"jsdoc/no-undefined-types": "off",
 		"jsdoc/require-param": "off",
 		"jsdoc/require-returns": "off",
 		"max-len": "off",
@@ -30,6 +31,7 @@
 		"space-before-function-paren": "off",
 		"space-in-parens": "off",
 		"template-curly-spacing": "off",
+		"unicorn/prefer-includes": "off", // bug in the rule. causes a bug in Popups.js
 
 		"no-nested-ternary": "error",
 		"no-restricted-syntax": [
@@ -43,7 +45,6 @@
 				"selector": "MemberExpression > Identifier[name=\"fail\"]"
 			}
 		],
-		"unicorn/prefer-includes": "error",
 
 		"camelcase": ["warn", {"properties": "never"}],
 		"es-x/no-object-values": "warn",
