--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -42,6 +42,12 @@ jobs:
       run: npm test
       name: UnblockReview unit tests
 
+    - working-directory: ./UserHighlighterSimple
+      run: npm install
+    - working-directory: ./UserHighlighterSimple
+      run: npm test
+      name: UserHighlighterSimple unit tests
+
     - working-directory: ./UserRightsDiff
       run: npm install
     - working-directory: ./UserRightsDiff
