--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
 	"extends": [
-		"wikimedia/client/es6",
+		"wikimedia/client",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
@@ -16,7 +16,6 @@
 	},
 	"rules": {
 		"camelcase": "off",
-		"es-x/no-array-prototype-includes": "off",
 		"es-x/no-async-functions": "off",
 		"es-x/no-class-fields": "off",
 		"es-x/no-optional-catch-binding": "off",
@@ -31,10 +30,11 @@
 		"jsdoc/require-returns": "off",
 		"jsdoc/check-alignment": "error",
 		"jsdoc/tag-lines": "error",
-		"max-len": "off",
+		"max-len": "off", // annoying
 		"mediawiki/class-doc": "off",
 		"no-console": "warn",
 		"no-jquery/no-class-state": "off",
+		"no-jquery/no-extend": "off", // autofix is buggy
 		"no-jquery/no-global-selector": "off",
 		"no-jquery/no-parse-html-literal": "off",
 		"no-shadow": "off",
