--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,6 @@
 	"rules": {
 		// default rules we don't like
 		"camelcase": "off",
-		"es-x/no-async-functions": "off",
 		"es-x/no-class-fields": "off",
 		"es-x/no-optional-catch-binding": "off",
 		"es-x/no-regexp-lookbehind-assertions": "off",
@@ -41,6 +40,7 @@
 		// non-default rules we do like
 		"jsdoc/check-alignment": "error",
 		"jsdoc/tag-lines": "error",
+		"no-nested-ternary": "error",
 
 		// rules we should probably fix someday
 		"eqeqeq": "warn",
