--- a/DraftCleaner/package.json
+++ b/DraftCleaner/package.json
@@ -4,12 +4,9 @@
 		"jquery": "^3.6.0"
 	},
 	"scripts": {
-		"test": "jest",
-		"build": "babel-node src/DraftCleaner2.js -d dist"
+		"test": "jest"
 	},
 	"devDependencies": {
-		"@babel/plugin-transform-modules-commonjs": "^7.16.0",
-		"babel-cli": "^6.26.0",
-		"babel-preset-env": "^1.7.0"
+		"@babel/plugin-transform-modules-commonjs": "^7.16.0"
 	}
 }
