--- a/SpeciesHelper/package.json
+++ b/SpeciesHelper/package.json
@@ -3,12 +3,9 @@
 		"jest": "^27.4.3"
 	},
 	"scripts": {
-		"test": "jest",
-		"build": "babel-node src/DraftCleaner2.js -d dist"
+		"test": "jest"
 	},
 	"devDependencies": {
-		"@babel/plugin-transform-modules-commonjs": "^7.16.0",
-		"babel-cli": "^6.26.0",
-		"babel-preset-env": "^1.7.0"
+		"@babel/plugin-transform-modules-commonjs": "^7.16.0"
 	}
 }
