--- a/UserHighlighterSimple/package.json
+++ b/UserHighlighterSimple/package.json
@@ -9,8 +9,6 @@
 		"test": "jest"
 	},
 	"devDependencies": {
-		"@babel/plugin-transform-modules-commonjs": "^7.16.0",
-		"babel-cli": "^6.26.0",
-		"babel-preset-env": "^1.7.0"
+		"@babel/plugin-transform-modules-commonjs": "^7.16.0"
 	}
 }
