--- a/UserRightsDiff/package.json
+++ b/UserRightsDiff/package.json
@@ -1,8 +1,12 @@
 {
-  "dependencies": {
-    "jest": "^27.4.4"
-  },
-  "scripts": {
-    "test": "jest"
-  }
+	"dependencies": {
+		"jest": "^27.4.3",
+		"jquery": "^3.6.0"
+	},
+	"scripts": {
+		"test": "jest"
+	},
+	"devDependencies": {
+		"@babel/plugin-transform-modules-commonjs": "^7.16.0"
+	}
 }
