--- a/GANReviewTool/package.json
+++ b/GANReviewTool/package.json
@@ -1,7 +1,8 @@
 {
 	"dependencies": {
 		"jest": "^28.1.0",
-		"types-mediawiki": "github:wikimedia-gadgets/types-mediawiki"
+		"types-mediawiki": "github:wikimedia-gadgets/types-mediawiki",
+		"wikiparser-template": "^1.24.1"
 	},
 	"scripts": {
 		"test": "jest"
