build: dependencies -> devDependencies

--- a/DraftCleaner/package.json
+++ b/DraftCleaner/package.json
@@ -1,12 +1,10 @@
 {
-	"dependencies": {
+	"devDependencies": {
+		"@babel/plugin-transform-modules-commonjs": "^7.16.0",
 		"jest": "^27.4.3",
 		"jquery": "^3.6.0"
 	},
 	"scripts": {
 		"test": "jest"
-	},
-	"devDependencies": {
-		"@babel/plugin-transform-modules-commonjs": "^7.16.0"
 	}
 }
