--- a/SpeciesHelper/package.json
+++ b/SpeciesHelper/package.json
@@ -1,11 +1,9 @@
 {
-	"dependencies": {
+	"devDependencies": {
+		"@babel/plugin-transform-modules-commonjs": "^7.16.0",
 		"jest": "^27.4.3"
 	},
 	"scripts": {
 		"test": "jest"
-	},
-	"devDependencies": {
-		"@babel/plugin-transform-modules-commonjs": "^7.16.0"
 	}
 }
