--- a/GANReviewTool/package.json
+++ b/GANReviewTool/package.json
@@ -5,7 +5,7 @@
 	"devDependencies": {
 		"@babel/plugin-transform-modules-commonjs": "^7.16.0",
 		"jest": "^28.1.0",
-		"types-mediawiki": "github:wikimedia-gadgets/types-mediawiki",
+		"types-mediawiki": "github:wikimedia-gadgets/types-mediawiki"
 	},
 	"scripts": {
 		"test": "jest"
