--- a/GANReviewTool/package.json
+++ b/GANReviewTool/package.json
@@ -4,10 +4,12 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-transform-modules-commonjs": "^7.16.0",
+		"esbuild": "^0.25.12",
 		"jest": "^28.1.0",
 		"types-mediawiki": "github:wikimedia-gadgets/types-mediawiki"
 	},
 	"scripts": {
+		"build": "esbuild GANReviewTool.js --charset=utf8 --bundle --format=esm --outdir=dist",
 		"test": "jest"
 	}
 }
